sas-core/main/default/objects/LIA_Claim__c/fields/Reason_for_Delay_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Delay_Cancellation__c</fullName>
    <label>Reason for Delay/Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIRS</fullName>
            </value>
            <value>
                <fullName>ARPT</fullName>
            </value>
            <value>
                <fullName>WEAT</fullName>
            </value>
            <value>
                <fullName>INDU</fullName>
            </value>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>DAMA</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>EQUI</fullName>
            </value>
            <value>
                <fullName>OPER</fullName>
            </value>
            <value>
                <fullName>PERF</fullName>
            </value>
            <value>
                <fullName>POSI</fullName>
            </value>
            <value>
                <fullName>ROTA</fullName>
            </value>
            <value>
                <fullName>CREW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>