sas-core/main/default/objects/LIA_Claim__c/fields/Submitted_Claim_Expenses_in_SEK__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Claim_Expenses_in_SEK__c</fullName>
    <description>The sum of all claim expenses connected to the Claim converted into SEK.</description>
    <inlineHelpText>The sum of all claim expenses connected to the Claim converted into SEK.</inlineHelpText>
    <label>Submitted Claim Expenses in SEK</label>
    <summarizedField>Claim_Expense__c.Claim_Expense_Amount_In_SEK__c</summarizedField>
    <summaryForeignKey>Claim_Expense__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>