sas-core/main/default/objects/LIA_Claim__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <label>Ticket Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>