sas-core/main/default/objects/LIA_Claim__c/fields/Total_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Amount__c</fullName>
    <description>Total Claim Amount</description>
    <formula>Principal__c + Interest__c + Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>