sas-core/main/default/objects/LIA_Claim__c/fields/Total_delay_to_final_destination__c.field-meta.xml
<CustomField>
    <fullName>Total_delay_to_final_destination__c</fullName>
    <label>Total delay to final destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-2</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>3-4</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
            <value>
                <fullName>Never arrived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>