sas-core/main/default/objects/LIA_Claim__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <formula>IF( Principal_Paid__c = TRUE, Principal__c,0) + IF( Interest_Paid__c = TRUE,  Interest__c , 0) + IF( Fees_Paid__c = TRUE,  Fees__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount Paid for this claim</inlineHelpText>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>