sas-core/main/default/objects/LIA_Claim__c/fields/Travel_Agent_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Travel_Agent_Booking_Reference__c</fullName>
    <description>PNR provided by a customer when they do not have a normal PNR</description>
    <label>Travel Agent Booking Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>