sas-core/main/default/objects/LIA_Claim__c/fields/Type_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Customer__c</fullName>
    <label>Type of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private customer</fullName>
            </value>
            <value>
                <fullName>Corporate customer</fullName>
            </value>
            <value>
                <fullName>Travel agency</fullName>
            </value>
            <value>
                <fullName>Other representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>