sas-core/main/default/objects/LIA_Claim__c/fields/Voucher_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a liability claim was compensated with vouchers.</description>
    <label>Voucher Compensation</label>
    <type>Checkbox</type>
</CustomField>