sas-core/main/default/objects/LIA_Claim__c/recordTypes/CompensationCard.recordType-meta.xml
<RecordType>
    <fullName>CompensationCard</fullName>
    <active>true</active>
    <description>Record type to differentiate the customer claims</description>
    <label>CompensationCard</label>
</RecordType>