sas-core/main/default/objects/LIA_Claim__c/recordTypes/LiabilityClaim.recordType-meta.xml
<RecordType>
    <fullName>LiabilityClaim</fullName>
    <active>true</active>
    <description>Record type to differentiate the liability claims</description>
    <label>LiabilityClaim</label>
</RecordType>