sas-core/main/default/objects/LIA_Claim__c/validationRules/Flight_information_for_non_baggage_claim.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_information_for_non_baggage_claim</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&quot;CustomerClaim&quot;, 
NOT(TEXT(Customer_Claim_Category__c) = &quot;Baggage&quot;),
NOT(ISBLANK(TEXT(Customer_Claim_Category__c))),
OR(ISBLANK(Liability_PNR__c),ISBLANK(Flight_Date__c),ISBLANK(Flight_Number__c )))</errorConditionFormula>
    <errorMessage>PNR , Flight Number and Flight Date are required for the selected Customer Claim Category</errorMessage>
</ValidationRule>