sas-core/main/default/objects/LIA_Claim__c/validationRules/Lock_Claim_After_Merge.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Claim_After_Merge</fullName>
    <active>true</active>
    <description>Prevents any update to a claim that has been merged</description>
    <errorConditionFormula>IsMerged__c = True</errorConditionFormula>
    <errorMessage>This Liability Claim cannot be updated since it has been merged</errorMessage>
</ValidationRule>