sas-core/main/default/objects/LIA_Claim__c/validationRules/Only_admin_can_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_admin_can_edit</fullName>
    <active>true</active>
    <description>This Validation rule allows for only admins to edit this field</description>
    <errorConditionFormula>AND( ISCHANGED( Name ), NOT($Profile.Name = &quot;System administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Only administrators are allowed to edit this field. Please contact an administrator for further help.</errorMessage>
</ValidationRule>