sas-core/main/default/objects/LIA_Claim__c/validationRules/Only_characters_allows_in_name_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_characters_allows_in_name_fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(Contact_First_Name__c  ,&quot;^[a-z  A-Z öÖåÅäÄøØ]*$&quot;)),
NOT(REGEX(Contact_Last_Name__c   ,&quot;^[a-z  A-Z öÖåÅäÄøØ]*$&quot;)))</errorConditionFormula>
    <errorMessage>Only characters allowed in name field</errorMessage>
</ValidationRule>