sas-core/main/default/objects/LIA_Claim__c/validationRules/PIR_for_Baggage_claims.validationRule-meta.xml
<ValidationRule>
    <fullName>PIR_for_Baggage_claims</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name =&quot;CustomerClaim&quot;, TEXT(Customer_Claim_Category__c) = &quot;Baggage&quot;, ISBLANK( PIR__c ) )</errorConditionFormula>
    <errorMessage>PIR value is required for Baggage claims.</errorMessage>
</ValidationRule>